// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FilterChip > renders correctly 1`] = `
<DocumentFragment>
  <button
    aria-disabled="false"
    aria-label="Test Chip, removable"
    class="inline-flex items-center gap-1.5 rounded-full font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none select-none cursor-pointer border border-border text-foreground bg-white hover:bg-neutral focus-visible:ring-foreground-light focus-visible:ring-offset-white h-8 px-4 text-sm"
    type="button"
  >
    <span
      class="flex-shrink-0"
    >
      Test Chip
    </span>
    <svg
      aria-hidden="true"
      class="lucide lucide-x inline-flex items-center justify-center w-4 h-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18 6 6 18"
      />
      <path
        d="m6 6 12 12"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`FilterChip > renders default story correctly 1`] = `
<DocumentFragment>
  <button
    aria-disabled="false"
    aria-label="Category, removable"
    class="inline-flex items-center gap-1.5 rounded-full font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none select-none cursor-pointer border border-border text-foreground bg-white hover:bg-neutral focus-visible:ring-foreground-light focus-visible:ring-offset-white h-8 px-4 text-sm"
    type="button"
  >
    <span
      class="flex-shrink-0"
    >
      Category
    </span>
    <svg
      aria-hidden="true"
      class="lucide lucide-x inline-flex items-center justify-center w-4 h-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18 6 6 18"
      />
      <path
        d="m6 6 12 12"
      />
    </svg>
  </button>
</DocumentFragment>
`;

exports[`FilterChip > renders different sizes correctly 1`] = `
<DocumentFragment>
  <div
    class="flex items-center gap-2"
  >
    <button
      aria-disabled="false"
      aria-label="Small, removable"
      class="inline-flex items-center gap-1.5 rounded-full font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none select-none cursor-pointer border border-border text-foreground bg-white hover:bg-neutral focus-visible:ring-foreground-light focus-visible:ring-offset-white h-7 px-3 text-xs"
      type="button"
    >
      <span
        class="flex-shrink-0"
      >
        Small
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-x inline-flex items-center justify-center w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
    </button>
    <button
      aria-disabled="false"
      aria-label="Medium, removable"
      class="inline-flex items-center gap-1.5 rounded-full font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none select-none cursor-pointer border border-border text-foreground bg-white hover:bg-neutral focus-visible:ring-foreground-light focus-visible:ring-offset-white h-8 px-4 text-sm"
      type="button"
    >
      <span
        class="flex-shrink-0"
      >
        Medium
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-x inline-flex items-center justify-center w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
    </button>
    <button
      aria-disabled="false"
      aria-label="Large, removable"
      class="inline-flex items-center gap-1.5 rounded-full font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none select-none cursor-pointer border border-border text-foreground bg-white hover:bg-neutral focus-visible:ring-foreground-light focus-visible:ring-offset-white h-9 px-5 text-sm"
      type="button"
    >
      <span
        class="flex-shrink-0"
      >
        Large
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-x inline-flex items-center justify-center w-5 h-5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`FilterChip > renders disabled state correctly 1`] = `
<DocumentFragment>
  <div
    class="flex flex-wrap gap-2"
  >
    <button
      aria-disabled="true"
      aria-label="Disabled Filter, removable"
      class="inline-flex items-center gap-1.5 rounded-full font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none select-none cursor-pointer border border-border text-foreground bg-white hover:bg-neutral focus-visible:ring-foreground-light focus-visible:ring-offset-white h-8 px-4 text-sm"
      disabled=""
      inert=""
      type="button"
    >
      <span
        class="flex-shrink-0"
      >
        Disabled Filter
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-x inline-flex items-center justify-center w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
    </button>
    <button
      aria-disabled="true"
      aria-label="Small Disabled, removable"
      class="inline-flex items-center gap-1.5 rounded-full font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none select-none cursor-pointer border border-border text-foreground bg-white hover:bg-neutral focus-visible:ring-foreground-light focus-visible:ring-offset-white h-7 px-3 text-xs"
      disabled=""
      inert=""
      type="button"
    >
      <span
        class="flex-shrink-0"
      >
        Small Disabled
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-x inline-flex items-center justify-center w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
    </button>
    <button
      aria-disabled="true"
      aria-label="Large Disabled, removable"
      class="inline-flex items-center gap-1.5 rounded-full font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none select-none cursor-pointer border border-border text-foreground bg-white hover:bg-neutral focus-visible:ring-foreground-light focus-visible:ring-offset-white h-9 px-5 text-sm"
      disabled=""
      inert=""
      type="button"
    >
      <span
        class="flex-shrink-0"
      >
        Large Disabled
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-x inline-flex items-center justify-center w-5 h-5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`FilterChip > renders multiple filters correctly 1`] = `
<DocumentFragment>
  <div
    class="flex flex-wrap gap-2"
  >
    <button
      aria-disabled="false"
      aria-label="Category A, removable"
      class="inline-flex items-center gap-1.5 rounded-full font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none select-none cursor-pointer border border-border text-foreground bg-white hover:bg-neutral focus-visible:ring-foreground-light focus-visible:ring-offset-white h-8 px-4 text-sm"
      type="button"
    >
      <span
        class="flex-shrink-0"
      >
        Category A
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-x inline-flex items-center justify-center w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
    </button>
    <button
      aria-disabled="false"
      aria-label="Status: Active, removable"
      class="inline-flex items-center gap-1.5 rounded-full font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none select-none cursor-pointer border border-border text-foreground bg-white hover:bg-neutral focus-visible:ring-foreground-light focus-visible:ring-offset-white h-8 px-4 text-sm"
      type="button"
    >
      <span
        class="flex-shrink-0"
      >
        Status: Active
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-x inline-flex items-center justify-center w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
    </button>
    <button
      aria-disabled="false"
      aria-label="Date: Today, removable"
      class="inline-flex items-center gap-1.5 rounded-full font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none select-none cursor-pointer border border-border text-foreground bg-white hover:bg-neutral focus-visible:ring-foreground-light focus-visible:ring-offset-white h-8 px-4 text-sm"
      type="button"
    >
      <span
        class="flex-shrink-0"
      >
        Date: Today
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-x inline-flex items-center justify-center w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
    </button>
    <button
      aria-disabled="false"
      aria-label="Priority: High, removable"
      class="inline-flex items-center gap-1.5 rounded-full font-medium transition-all duration-200 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none select-none cursor-pointer border border-border text-foreground bg-white hover:bg-neutral focus-visible:ring-foreground-light focus-visible:ring-offset-white h-8 px-4 text-sm"
      type="button"
    >
      <span
        class="flex-shrink-0"
      >
        Priority: High
      </span>
      <svg
        aria-hidden="true"
        class="lucide lucide-x inline-flex items-center justify-center w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;
